Add some tests, Unify exception handling Remove unnecessary files